Add user role choice design

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -34,3 +34,14 @@
         background-color: #f16f28;
     }
 
+
+
+
+.container2{
+	margin-top: 5vh;
+	text-align: center;
+}
+.btn-group{
+	margin-top: 10vh;
+}
+
